@@ -5,6 +5,8 @@
     * Do not process Pending DMNs.
     * Check for set integration_type before try to use it.
     * Changes into the readme file.
+    * Added NUVEI_LOGS_DIR constant. Save all plugin generated files in it.
+    * Removed tmp folder.
 
 # 1.2.2
     * Fixed the missing message for Insufficient funds.
